--- a/view/admin/includes/header.ejs
+++ b/view/admin/includes/header.ejs
@@ -34,4 +34,5 @@
 <link rel="stylesheet" href="/admin/css/styles.css">
 <link rel="stylesheet" href="/admin/css/main.css">
 <script src="/admin/js/base/loader.js"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
