--- a/view/admin/editProducts.ejs
+++ b/view/admin/editProducts.ejs
@@ -114,7 +114,7 @@
             <div class="row">
               <div class="col-6 mb-3">
                 <label for="formFile" class="form-label">Update Image</label>
-                <input name="img" class="form-control" type="file" id="formFile">
+                <input name="img" class="form-control" type="file" id="formFile" multiple>
               </div>
               <div class="col-3 ms-3 mb-3">
                 <label for="exampleColorInput" class="form-label">Color picker</label>
