--- a/view/admin/productsList.ejs
+++ b/view/admin/productsList.ejs
@@ -99,14 +99,14 @@
           </div>
 
           <% for(Product of Products){ %>
-          <div class="card mb-2">
+          <div id="<%-Product.id%>" class="card mb-2">
             <div class="row g-0 h-100 sh-lg-12 position-relative">
               <a
                 href="/admin/editProduct/?id=<%-Product.id%>"
                 class="col-auto position-relative"
               >
                 <img
-                style="height:95  px ;"
+                style="height:95px ;"
                   src="../productImages/<%=Product.Images[0] %>"
                   alt="product"
                   class="card-img card-img-horizontal sw-11 "
@@ -159,7 +159,7 @@
                       class="col-1 d-flex flex-column mb-2 mb-lg-0 align-items-end order-2 order-lg-last justify-content-lg-center"
                     >
                       <a
-                        href="/admin/deleteProduct/?id=<%-Product.id%>"
+                        onclick="Delete('<%=Product.id%>')"
                         class="btn btn-success"
                         >Delete</a
                       >
@@ -179,3 +179,45 @@
   </div>
 </main>
 <%- include('includes/footer') %>
+
+<script>
+  function Delete(path){
+    Swal.fire({
+  title: 'Are you sure?',
+  text: "You won't be able to revert this!",
+  icon: 'warning',
+  showCancelButton: true,
+  confirmButtonColor: '#3085d6',
+  cancelButtonColor: '#d33',
+  confirmButtonText: 'Yes, delete it!'
+}).then((result) => {
+  if (result.isConfirmed) {
+    $.ajax({
+      url:'/admin/deleteProduct/?id='+path,
+      method:'get',
+      success:(response)=>{
+       if(response.state){
+       location.reload()
+       }
+      }
+    })
+    const Toast = Swal.mixin({
+    toast: true,
+    position: 'top-end',
+    showConfirmButton: false,
+    timer: 3000,
+    timerProgressBar: true,
+    didOpen: (toast) => {
+    toast.addEventListener('mouseenter', Swal.stopTimer)
+    toast.addEventListener('mouseleave', Swal.resumeTimer)
+  }
+})
+
+Toast.fire({
+  icon: 'success',
+  title: 'Product Deleted'
+})
+  }
+})
+  }
+</script>
