--- a/view/user/home.ejs
+++ b/view/user/home.ejs
@@ -83,8 +83,8 @@
                             <div class="product-details">
                                 <h6><%=Product.Name%></h6>
                                 <div class="price">
-                                    <h6>Rs.<%=Product.CostPrize%></h6>
-                                    <h6 class="l-through">Rs.<%=Product.SellingPrize%></h6>
+                                    <h6>Rs.<%=Product.SellingPrize%></h6>
+                                    <h6 class="l-through">Rs.<%=Product.CostPrize%></h6>
                                 </div>
                                 <div class="prd-bottom">
     
