--- a/view/admin/login.ejs
+++ b/view/admin/login.ejs
@@ -7,12 +7,12 @@
             <p class="text-danger"><%=errMsg%></p>
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
-              <input type="email" name="Email" class="form-control" value="admin@gmail.com" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+              <input type="email" name="Email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
               <p class="text-danger" id="emailError"></p>
             </div>
             <div class="form-group mb-5">
               <label for="exampleInputPassword1">Password</label>
-              <input type="password" name="Password" class="form-control" value="12345" id="password" placeholder="Password">
+              <input type="password" name="Password" class="form-control" id="password" placeholder="Password">
               <p class="text-danger" id="passwordError"></p>
             </div>
             
