--- a/view/user/addAddress.ejs
+++ b/view/user/addAddress.ejs
@@ -7,48 +7,48 @@
     <form class="row contact_form" action="/saveAddress" method="post" novalidate="novalidate">
         <div class="col-md-6 form-group p_star">
             <input type="text" class="form-control" id="first" name="firstName"
-                placeholder="First name" value="Abdul">
+                placeholder="First name" >
         </div>
         <div class="col-md-6 form-group p_star">
             <input type="text" class="form-control" id="last" name="lastName"
-                placeholder="Last name" value="Rayif">
+                placeholder="Last name" >
         </div>
         <div class="col-md-6 form-group p_star">
             <input type="text" class="form-control" id="number" name="number"
-                placeholder="Phone number" value="9746402973">
+                placeholder="Phone number" >
         </div>
         <div class="col-md-6 form-group p_star">
             <input type="email" class="form-control" id="email" name="email"
-                placeholder="Email Address" value="rayifvp336@gmail.com">
+                placeholder="Email Address" >
         </div>
         <div class="col-md-12 form-group p_star">
             <input type="text" class="form-control" id="House-name" name="houseName"
                 placeholder="House Name/Company Name/House No."
-                value="Packapeer Academy Pvt.Ltd">
+                >
         </div>
         <div class="col-md-12 form-group p_star">
             <input type="text" class="form-control" id="address" name="address"
-                placeholder="Address" value="SDF building">
+                placeholder="Address" >
         </div>
         <div class="col-md-6 form-group p_star">
             <input type="text" class="form-control" id="city" name="city"
-                placeholder="Town/City" value="Kakkanchery">
+                placeholder="Town/City" >
         </div>
         <div class="col-md-6 form-group p_star">
             <input type="text" class="form-control" id="district" name="district"
-                placeholder="District" value="Malappuram">
+                placeholder="District">
         </div>
         <div class="col-md-6 form-group p_star">
             <input type="text" class="form-control" id="state" name="state" placeholder="State"
-                value="Kerala">
+                >
         </div>
         <div class="col-md-6 form-group p_star">
             <input type="text" class="form-control" id="country" name="country"
-                placeholder="Country" value="India">
+                placeholder="Country">
         </div>
         <div class="col-md-6 form-group p_star">
             <input type="text" class="form-control" id="zip" name="pincode"
-                placeholder="Pincode/ZIP" value="679101">
+                placeholder="Pincode/ZIP" >
         </div>
         <div class="col-md-12 form-group p_star">
             <button class="genric-btn primary float-right" type="submit">Save</button>
