--- a/view/user/home.ejs
+++ b/view/user/home.ejs
@@ -1,36 +1,40 @@
-<%- include('includes/header.ejs') %>
-<%- include('includes/navigation.ejs') %>
+<%- include('includes/header.ejs') %> <%- include('includes/navigation.ejs') %>
 <section class="banner-area">
-		<div class="container">
-			<div class="row fullscreen align-items-center justify-content-start">
-				<div class="col-lg-12">
-					<div class="active-banner-slider owl-carousel">
-						<!-- single-slide -->
-                        <% for(Banner of Banners){ %>
-                            <div class="row single-slide align-items-center d-flex">
-                                <div class="col-lg-5 col-md-6">
-                                    <div class="banner-content">
-                                        <h1><%=Banner.Title%></h1>
-                                        <p><%=Banner.Description%></p>
-                                        <div class="add-bag d-flex align-items-center">
-                                            <a class="add-btn" href="/shop"><span class="lnr lnr-cross"></span></a>
-                                            <span class="add-text text-uppercase">Add to Bag</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-7">
-                                    <div class="banner-img">
-                                        <img class="img-fluid" src="BannerImages/<%=Banner.Image%>" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                        <% } %>
-						
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+  <div class="container">
+    <div class="row fullscreen align-items-center justify-content-start">
+      <div class="col-lg-12">
+        <div class="active-banner-slider owl-carousel">
+          <!-- single-slide -->
+          <% for(Banner of Banners){ %>
+          <div class="row single-slide align-items-center d-flex">
+            <div class="col-lg-5 col-md-6">
+              <div class="banner-content">
+                <h1><%=Banner.Title%></h1>
+                <p><%=Banner.Description%></p>
+                <div class="add-bag d-flex align-items-center">
+                  <a class="add-btn" href="/shop"
+                    ><span class="lnr lnr-cross"></span
+                  ></a>
+                  <span class="add-text text-uppercase">Add to Bag</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-7">
+              <div class="banner-img">
+                <img
+                  class="img-fluid"
+                  src="BannerImages/<%=Banner.Image%>"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+          <% } %>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 <!-- End banner Area -->
 
 <!-- start features Area -->
@@ -43,125 +47,252 @@
 
 <!-- start product Area -->
 <section class="mt-5">
-    <!-- single product slide -->
-    <div class="single-product-slider">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-6 text-center">
-                    <div class="section-title">
-                        <h1>Latest Products</h1>
-                        <p>Good SHOES take you Good places !</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <!-- single product -->
-                <% for ( Product of Products) { %>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="single-product">
-                            <img class="img-fluid" src="../productImages/<%=Product.Images[0]%>" alt="">
-                            <div class="product-details">
-                                <h6><%=Product.Name%></h6>
-                                <div class="price">
-                                    <h6>Rs.<%=Product.SellingPrize%></h6>
-                                    <h6 class="l-through">Rs.<%=Product.CostPrize%></h6>
-                                </div>
-                                <div class="prd-bottom">
-                                    <a href="/addToCart/?productId=<%=Product.id%>&productName=<%=Product.Name%>&price=<%=Product.SellingPrize%>&images=<%=Product.Images[0]%>" class="social-info">
-                                        <span class="ti-bag"></span>
-                                        <p class="hover-text">add to bag</p>
-                                    </a>
-                                    <a href="/addToWishlist/?productId=<%=Product.id%>&productName=<%=Product.Name%>&price=<%=Product.SellingPrize%>&images=<%=Product.Images[0]%>" class="social-info">
-                                        <span class="lnr lnr-heart"></span>
-                                        <p class="hover-text">Wishlist</p>
-                                    </a>
-                                    <a href="/viewProduct/?id=<%=Product.id%>" class="social-info">
-                                        <span class="lnr lnr-move"></span>
-                                        <p class="hover-text">view </p>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                <% } %>
-                
-                
-            </div>
+  <!-- single product slide -->
+  <div class="single-product-slider">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-6 text-center">
+          <div class="section-title">
+            <h1>Latest Products</h1>
+            <p>Good SHOES take you Good places !</p>
+          </div>
         </div>
+      </div>
+      <div class="row">
+        <!-- single product -->
+        <% for ( Product of Products) { %>
+        <div class="col-lg-3 col-md-6">
+          <div class="single-product">
+            <img
+              class="img-fluid"
+              src="../productImages/<%=Product.Images[0]%>"
+              alt=""
+            />
+            <div class="product-details">
+              <h6><%=Product.Name%></h6>
+              <div class="price">
+                <h6>Rs.<%=Product.SellingPrize%></h6>
+                <h6 class="l-through">Rs.<%=Product.CostPrize%></h6>
+              </div>
+              <div class="prd-bottom">
+                <a  onclick="addtoCart('<%=Product.id%>','<%=Product.Name%>','<%=Product.SellingPrize%>','<%=Product.Images[0]%>')" class="social-info">
+                  <span class="ti-bag"></span>
+                  <p class="hover-text">add to bag</p>
+                </a>
+                <a  onclick="addtoWishlist('<%=Product.id%>','<%=Product.Name%>','<%=Product.SellingPrize%>','<%=Product.Images[0]%>')" class="social-info">
+                  <span class="lnr lnr-heart"></span>
+                  <p class="hover-text">Wishlist</p>
+                </a>
+                <a href="/viewProduct/?id=<%=Product.id%>" class="social-info">
+                  <span class="lnr lnr-move"></span>
+                  <p class="hover-text">view</p>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <% } %>
+      </div>
     </div>
-    <!-- single product slide -->
+  </div>
+  <!-- single product slide -->
 </section>
 <!-- end product Area -->
 
-
 <!-- start footer Area -->
 <footer class="footer-area section_gap">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3  col-md-6 col-sm-6">
-                <div class="single-footer-widget">
-                    <h6>About Us</h6>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore
-                        magna aliqua.
-                    </p>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="single-footer-widget">
+          <h6>About Us</h6>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore dolore magna aliqua.
+          </p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-6">
+        <div class="single-footer-widget">
+          <h6>Newsletter</h6>
+          <p>Stay update with our latest</p>
+          <div class="" id="mc_embed_signup">
+            <form
+              target="_blank"
+              novalidate="true"
+              action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
+              method="get"
+              class="form-inline"
+            >
+              <div class="d-flex flex-row">
+                <input
+                  class="form-control"
+                  name="EMAIL"
+                  placeholder="Enter Email"
+                  onfocus="this.placeholder = ''"
+                  onblur="this.placeholder = 'Enter Email '"
+                  required=""
+                  type="email"
+                />
+
+                <button class="click-btn btn btn-default">
+                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                </button>
+                <div style="position: absolute; left: -5000px">
+                  <input
+                    name="b_36c4fd991d266f23781ded980_aefe40901a"
+                    tabindex="-1"
+                    value=""
+                    type="text"
+                  />
                 </div>
-            </div>
-            <div class="col-lg-4  col-md-6 col-sm-6">
-                <div class="single-footer-widget">
-                    <h6>Newsletter</h6>
-                    <p>Stay update with our latest</p>
-                    <div class="" id="mc_embed_signup">
 
-                        <form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                         method="get" class="form-inline">
-
-                            <div class="d-flex flex-row">
-
-                                <input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '"
-                                 required="" type="email">
-
-
-                                <button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
-                                <div style="position: absolute; left: -5000px;">
-                                    <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-                                </div>
-
-                                <!-- <div class="col-lg-4 col-md-4">
+                <!-- <div class="col-lg-4 col-md-4">
                                             <button class="bb-btn btn"><span class="lnr lnr-arrow-right"></span></button>
                                         </div>  -->
-                            </div>
-                            <div class="info"></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3  col-md-6 col-sm-6">
-                <div class="single-footer-widget mail-chimp">
-                    <h6 class="mb-20">Instragram Feed</h6>
-                    <ul class="instafeed d-flex flex-wrap">
-                        <li><img src="user/img/i1.jpg" alt=""></li>
-                        <li><img src="user/img/i2.jpg" alt=""></li>
-                        <li><img src="user/img/i3.jpg" alt=""></li>
-                        <li><img src="user/img/i4.jpg" alt=""></li>
-                        <li><img src="user/img/i5.jpg" alt=""></li>
-                        <li><img src="user/img/i6.jpg" alt=""></li>
-                        <li><img src="user/img/i7.jpg" alt=""></li>
-                        <li><img src="user/img/i8.jpg" alt=""></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-6 col-sm-6">
-                <div class="single-footer-widget">
-                    <h6>Follow Us</h6>
-                    <p>Let us be social</p>
-                    <div class="footer-social d-flex align-items-center">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-dribbble"></i></a>
-                        <a href="#"><i class="fa fa-behance"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>   
-<%- include('includes/footer.ejs') %>
+              </div>
+              <div class="info"></div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="single-footer-widget mail-chimp">
+          <h6 class="mb-20">Instragram Feed</h6>
+          <ul class="instafeed d-flex flex-wrap">
+            <li><img src="user/img/i1.jpg" alt="" /></li>
+            <li><img src="user/img/i2.jpg" alt="" /></li>
+            <li><img src="user/img/i3.jpg" alt="" /></li>
+            <li><img src="user/img/i4.jpg" alt="" /></li>
+            <li><img src="user/img/i5.jpg" alt="" /></li>
+            <li><img src="user/img/i6.jpg" alt="" /></li>
+            <li><img src="user/img/i7.jpg" alt="" /></li>
+            <li><img src="user/img/i8.jpg" alt="" /></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-lg-2 col-md-6 col-sm-6">
+        <div class="single-footer-widget">
+          <h6>Follow Us</h6>
+          <p>Let us be social</p>
+          <div class="footer-social d-flex align-items-center">
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-dribbble"></i></a>
+            <a href="#"><i class="fa fa-behance"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      function addtoCart(Id, Name, sellingPrice, image) {
+        $.ajax({
+          url:
+            "/addToCart/?productId=" +
+            Id +
+            "&productName=" +
+            Name +
+            "&price=" +
+            sellingPrice +
+            "&images=" +
+            image +"&quantity= 1" ,
+          method: "get",
+          success: (Response) => {
+            if (Response.status==true) {
+              const Toast = Swal.mixin({
+                toast: true,
+                position: "top-end",
+                showConfirmButton: false,
+                timer: 3000,
+                timerProgressBar: true,
+                didOpen: (toast) => {
+                  toast.addEventListener("mouseenter", Swal.stopTimer);
+                  toast.addEventListener("mouseleave", Swal.resumeTimer);
+                },
+              });
+
+              Toast.fire({
+                icon: "success",
+                title: "Product added to Cart",
+              });
+            }else if(Response.status==false){
+                const Toast = Swal.mixin({
+                toast: true,
+                position: "top-end",
+                showConfirmButton: false,
+                timer: 3000,
+                timerProgressBar: true,
+                didOpen: (toast) => {
+                  toast.addEventListener("mouseenter", Swal.stopTimer);
+                  toast.addEventListener("mouseleave", Swal.resumeTimer);
+                },
+              });
+
+              Toast.fire({
+                icon: "error",
+                title: "Product Already Exist",
+              }); 
+            }else{
+                location.href='/login'
+            }
+          },
+        });
+      }
+      function addtoWishlist(Id, Name, sellingPrice, image) {
+        $.ajax({
+          url:
+            "/addToWishlist/?productId=" +
+            Id +
+            "&productName=" +
+            Name +
+            "&price=" +
+            sellingPrice +
+            "&images=" +
+            image,
+          method: "get",
+          success: (Response) => {
+            if (Response.status==true) {
+              const Toast = Swal.mixin({
+                toast: true,
+                position: "top-end",
+                showConfirmButton: false,
+                timer: 3000,
+                timerProgressBar: true,
+                didOpen: (toast) => {
+                  toast.addEventListener("mouseenter", Swal.stopTimer);
+                  toast.addEventListener("mouseleave", Swal.resumeTimer);
+                },
+              });
+
+              Toast.fire({
+                icon: "success",
+                title: "Product added to wishlist",
+              });
+            }else if(Response.status==false){
+                const Toast = Swal.mixin({
+                toast: true,
+                position: "top-end",
+                showConfirmButton: false,
+                timer: 3000,
+                timerProgressBar: true,
+                didOpen: (toast) => {
+                  toast.addEventListener("mouseenter", Swal.stopTimer);
+                  toast.addEventListener("mouseleave", Swal.resumeTimer);
+                },
+              });
+
+              Toast.fire({
+                icon: "error",
+                title: "Product Already Exist",
+              }); 
+            }else{
+                location.href='/login'
+            }
+          },
+        });
+      }
+    </script>
+    <%- include('includes/footer.ejs') %>
+  </div>
+</footer>
