--- a/view/user/viewProduct.ejs
+++ b/view/user/viewProduct.ejs
@@ -32,7 +32,7 @@
                     
                     <pre style="font-family: Arial, Helvetica, sans-serif; font-size: small;"><%=Product.Description%></pre>
                     <div class="product_count mt-4">
-                    <form action="/addToCart/?productId=<%=Product._id%>&productName=<%=Product.Name%>&price=<%=Product.SellingPrize%>&images=<%=Product.Images[0]%>" method="post">
+                    <form>
 
                         
                         <label for="qty">Quantity:</label>
@@ -44,8 +44,8 @@
                     </div>
                     
                     <div class="card_area d-flex align-items-center">
-                        <button class="primary-btn">Add to Cart</button>
-                        <a class="icon_btn" href="/addToWishlist/?productId=<%=Product._id%>&productName=<%=Product.Name%>&price=<%=Product.SellingPrize%>&images=<%=Product.Images[0]%>"><i class="lnr lnr lnr-heart"></i></a>
+                        <a onclick="addtoCart('<%=Product._id%>','<%=Product.Name%>','<%=Product.SellingPrize%>','<%=Product.Images[0]%>')"class="primary-btn text-light">Add to Cart</a>
+                        <a class="icon_btn" onclick="addtoWishlist('<%=Product._id%>','<%=Product.Name%>','<%=Product.SellingPrize%>','<%=Product.Images[0]%>')"><i class="lnr lnr lnr-heart"></i></a>
                     </div>
                     </form>
                 </div>
@@ -54,6 +54,114 @@
     </div>
 </div>
 <!--================End Single Product Area =================-->
+<script>
+    function addtoWishlist(Id, Name, sellingPrice, image) {
+        $.ajax({
+          url:
+            "/addToWishlist/?productId=" +
+            Id +
+            "&productName=" +
+            Name +
+            "&price=" +
+            sellingPrice +
+            "&images=" +
+            image,
+          method: "get",
+          success: (Response) => {
+            if (Response.status==true) {
+              const Toast = Swal.mixin({
+                toast: true,
+                position: "top-end",
+                showConfirmButton: false,
+                timer: 3000,
+                timerProgressBar: true,
+                didOpen: (toast) => {
+                  toast.addEventListener("mouseenter", Swal.stopTimer);
+                  toast.addEventListener("mouseleave", Swal.resumeTimer);
+                },
+              });
 
+              Toast.fire({
+                icon: "success",
+                title: "Product added to wishlist",
+              });
+            }else if(Response.status==false){
+                const Toast = Swal.mixin({
+                toast: true,
+                position: "top-end",
+                showConfirmButton: false,
+                timer: 3000,
+                timerProgressBar: true,
+                didOpen: (toast) => {
+                  toast.addEventListener("mouseenter", Swal.stopTimer);
+                  toast.addEventListener("mouseleave", Swal.resumeTimer);
+                },
+              });
+
+              Toast.fire({
+                icon: "error",
+                title: "Product Already Exist",
+              }); 
+            }else{
+                location.href='/login'
+            }
+          },
+        });
+      }
+      function addtoCart(Id, Name, sellingPrice, image) {
+        let quantity= document.getElementById('sst').value
+        $.ajax({
+          url:
+            "/addToCart/?productId=" +
+            Id +
+            "&productName=" +
+            Name +
+            "&price=" +
+            sellingPrice +
+            "&images=" +
+            image + "&quantity=" + quantity,
+          method: "get",
+          success: (Response) => {
+            if (Response.status==true) {
+              const Toast = Swal.mixin({
+                toast: true,
+                position: "top-end",
+                showConfirmButton: false,
+                timer: 3000,
+                timerProgressBar: true,
+                didOpen: (toast) => {
+                  toast.addEventListener("mouseenter", Swal.stopTimer);
+                  toast.addEventListener("mouseleave", Swal.resumeTimer);
+                },
+              });
+
+              Toast.fire({
+                icon: "success",
+                title: "Product added to Cart",
+              });
+            }else if(Response.status==false){
+                const Toast = Swal.mixin({
+                toast: true,
+                position: "top-end",
+                showConfirmButton: false,
+                timer: 3000,
+                timerProgressBar: true,
+                didOpen: (toast) => {
+                  toast.addEventListener("mouseenter", Swal.stopTimer);
+                  toast.addEventListener("mouseleave", Swal.resumeTimer);
+                },
+              });
+
+              Toast.fire({
+                icon: "error",
+                title: "Product Already Exist",
+              }); 
+            }else{
+                location.href='/login'
+            }
+          },
+        });
+      }
+</script>
 
 <%- include('./includes/footer.ejs') %>
